monitor objects numbers of before/after GC